refactor: 更新项目仓库链接、Docker镜像名称并删除旧同步工作流

--- a/i18n/zh_CN/LC_MESSAGES/zh_CN.po
+++ b/i18n/zh_CN/LC_MESSAGES/zh_CN.po
@@ -1,6 +1,6 @@
-# DouyinLiveRecorder.
+# live-recorder.
 # Copyright (C) 2024 Hmily
-# This file is distributed under the same license as the DouyinLiveRecorder package.
+# This file is distributed under the same license as the live-recorder package.
 #
 #, fuzzy
 
@@ -16,7 +16,7 @@ msgstr ""
 "Language: zh_CN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: douyinliverecorder/spider.py
+#: live-recorder/spider.py
 msgid "IP banned. Please change device or network."
 msgstr "IP被禁止 请更换设备或网络"
 
